fixed side bar width bug on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -241,6 +241,7 @@
   .sidebar-container {
     border-radius: 0;
     height: auto;
+    width: 100%;
     margin-top: 0;
     box-shadow: none;
     border-bottom: 1px solid #e5e7eb;
